Fixing typos and error in photometry SpecData section of custom S4 inputs tutorial

--- a/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
+++ b/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
@@ -43,7 +43,7 @@
    "id": "93f6909a-b620-45e3-a642-acca5c844c7b",
    "metadata": {},
    "source": [
-    "You'll see that this is a `.h5` file. Many Eureka! outputs are saved in this format, and more specifically as [xarray](https://docs.xarray.dev/en/latest/index.html) objects. This is a data format that allows for storing complex datasets, and requires specific libraries to be read into Python. There are multiple options, but we'll use the [astraeus](https://kevin218.github.io/Astraeus/) library created by Kevin Stevenson."
+    "You'll see that this is a `.h5` file. Many Eureka! outputs are saved in this format, and more specifically as [Xarray](https://docs.xarray.dev/en/latest/index.html) objects. This is a data format that allows for storing complex datasets, and requires specific libraries to be read into Python. There are multiple options, but we'll use the [Astraeus](https://kevin218.github.io/Astraeus/) library created by Kevin Stevenson."
    ]
   },
   {
@@ -164,7 +164,7 @@
     "**Optional**\n",
     "\n",
     "* A 2D mask for specific points to ignore in the spectral time series (`optmask`).\n",
-    "* The pixel shift in the peak of the spectral trace over time (`centroid_y` / `centroid_sy`).\n",
+    "* The shift in the spectral trace centroid and width over time (`centroid_y` and `centroid_sy`, respectively).\n",
     "* Various other variables and attributes.\n",
     "&nbsp;\n",
     "\n",
@@ -198,7 +198,7 @@
     "Note that these values are entirely made up for the purpose of this notebook - you should be setting these variables to *your* data values!\n",
     "&nbsp;\n",
     "\n",
-    "To build the xarray, we will again use the [astraeus](https://kevin218.github.io/Astraeus/) library. Let's start by initialising a dataset:"
+    "To build the Xarray, we will again use the [Astraeus](https://kevin218.github.io/Astraeus/) library. Let's start by initialising a dataset:"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "id": "f334c30e-c403-4ff9-8c0a-5a0620907dc4",
    "metadata": {},
    "source": [
-    "Finally, we can use astraeus once more to save the dataset to a Eureka! compatible file.\n",
+    "Finally, we can use Astraeus once more to save the dataset to a Eureka! compatible file.\n",
     "&nbsp;\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
@@ -367,7 +367,7 @@
    "id": "53605ea7-ab61-4df0-9d10-25ac06ebcbd6",
    "metadata": {},
    "source": [
-    "Congratulations! You've learned everything you need to make your own Eureka! compatible dataset. Feel free to repurpose or modify any of the cells in this notebook for to suit your actual data. \n",
+    "Congratulations! You've learned everything you need to make your own Eureka! compatible dataset. Feel free to repurpose or modify any of the cells in this notebook to suit your actual data. \n",
     "\n",
     "If you were hoping to import some photometric data, please read the section below.\n",
     "\n",
@@ -448,8 +448,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "As you can see the general structure is similar, but some of the data variables have changed. Specifically, the `optspec`/`opterr` variables that we needed to assign for our custom dataset before are no longer present. Instead, they are replaced by the `aplev`/`aperr` variables. Furthermore, as there is no wavelength dependence for photometric data, the `wave_1d` variable does not need to be assigned, nor the `x` pixel coordinates. \n",
-    "&nbsp;\n",
+    "As you can see the general structure is similar, but some of the data variables have changed. Specifically, the `optspec`/`opterr` variables that we needed to assign for our custom dataset before are no longer present. Instead, they are replaced by the `aplev`/`aperr` variables. Furthermore, since the wavelength is the same for every pixel in photometric data, the `wave_1d` variable should just be set to the effective wavelength of the filter for a single, arbitrary `x` pixel coordinate.\n",
     "\n",
     "So, let's fake another dataset, but this time for photometry:"
    ]
@@ -466,6 +465,8 @@
     "time_units = 'MJD'\n",
     "aplev = np.ones(len(time))\n",
     "aperr = np.ones(len(time))*0.01\n",
+    "wave_1d = 2.1\n",
+    "wave_units = 'microns'\n",
     "flux_units = 'e-'\n",
     "\n",
     "# Create an empty dataset\n",
@@ -474,12 +475,15 @@
     "# Assign the variables to the dataset\n",
     "photom_dataset['time'] = time\n",
     "photom_dataset['time'].attrs['time_units'] = time_units\n",
+    "custom_dataset['x'] = [0,]\n",
     "photom_dataset['aplev'] = (['time'], aplev)\n",
     "photom_dataset['aplev'].attrs['flux_units'] = flux_units\n",
     "photom_dataset['aplev'].attrs['time_units'] = time_units\n",
     "photom_dataset['aperr'] = (['time'], aperr)\n",
     "photom_dataset['aperr'].attrs['flux_units'] = flux_units\n",
-    "photom_dataset['aperr'].attrs['time_units'] = time_units"
+    "photom_dataset['aperr'].attrs['time_units'] = time_units\n",
+    "photom_dataset['wave_1d'] = (['x'], wave_1d)\n",
+    "photom_dataset['wave_1d'].attrs['wave_units'] = wave_units"
    ]
   },
   {
@@ -569,9 +573,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:eureka] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-eureka-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -583,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
