--- a/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
+++ b/docs/source/tutorials/formatting_eureka_s4_compatible_data.ipynb
@@ -465,7 +465,7 @@
     "time_units = 'MJD'\n",
     "aplev = np.ones(len(time))\n",
     "aperr = np.ones(len(time))*0.01\n",
-    "wave_1d = 2.1\n",
+    "wave_1d = np.array([2.1,])\n",
     "wave_units = 'microns'\n",
     "flux_units = 'e-'\n",
     "\n",
@@ -475,7 +475,7 @@
     "# Assign the variables to the dataset\n",
     "photom_dataset['time'] = time\n",
     "photom_dataset['time'].attrs['time_units'] = time_units\n",
-    "custom_dataset['x'] = [0,]\n",
+    "photom_dataset['x'] = [0,]\n",
     "photom_dataset['aplev'] = (['time'], aplev)\n",
     "photom_dataset['aplev'].attrs['flux_units'] = flux_units\n",
     "photom_dataset['aplev'].attrs['time_units'] = time_units\n",
@@ -505,12 +505,14 @@
      "output_type": "stream",
      "text": [
       "<xarray.Dataset>\n",
-      "Dimensions:  (time: 100)\n",
+      "Dimensions:  (time: 100, x: 1)\n",
       "Coordinates:\n",
       "  * time     (time) float64 5.969e+04 5.969e+04 ... 5.969e+04 5.969e+04\n",
+      "  * x        (x) int64 0\n",
       "Data variables:\n",
       "    aplev    (time) float64 1.0 1.0 1.0 1.0 1.0 1.0 ... 1.0 1.0 1.0 1.0 1.0 1.0\n",
       "    aperr    (time) float64 0.01 0.01 0.01 0.01 0.01 ... 0.01 0.01 0.01 0.01\n",
+      "    wave_1d  (x) float64 2.1\n",
       "Attributes:\n",
       "    inst:         nircam\n",
       "    data_format:  custom\n",
@@ -573,9 +575,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:eureka] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-eureka-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -587,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
